# mp3-rewind

./: .gitignore  README.md  app.overlay  build_sim.sh  platformio.ini
server_host/: flask_server.py
src/: main.c
src/audio/: audio_buffers.c  audio_buffers.h  audioplay.c  audioplay_stubs.c  audiosys.c  audiosys.h  bluetooth.c  bluetooth.h  gatt_audio_service.c  gatt_audio_service.h  wav_decoder.c  wav_decoder.h
src/server_client/: audio_client.c  audio_client.h
src/storage/: breakout.c  fs.c  fs.h  sim_fs.c
src/utils/: circular_buffers.c  circular_buffers.h  error_handling.c  error_handling.h  sim_error_handling.c
test/: sim_main.c
test_data/: sample.flac  test.txt
zephyr/: CMakeLists.txt  prj.conf
